added routes for seizures to spec, converted pet.py into a module to nest seizure api resources
